
plugins {
    id 'application'
    id 'org.openjfx.javafxplugin'
    id 'org.kordamp.gradle.jdeps'
}

group 'com.steveperkins'
version '1.0.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'org.openjfx.javafxplugin'

sourceCompatibility = 1.9

repositories {
    mavenCentral()
    jcenter()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
}

javafx {
    modules = [ 'javafx.controls', 'javafx.graphics' ]
}

jar {
    manifest {
        attributes 'Main-Class': 'gui.Main'
    }
}

def java_home = System.getenv('JAVA_HOME')
def javafx_home = System.getenv('JAVAFX_HOME')

task link(type: Exec) {
    dependsOn 'clean'
    dependsOn 'jar'

    workingDir 'build'

    commandLine "${java_home}/bin/jlink", '--module-path', "libs${File.pathSeparatorChar}${java_home}/jmods${File.pathSeparatorChar}${javafx_home}",
            '--add-modules', 'gui', '--launcher', 'gui=gui/gui.Main', '--output', 'dist', '--strip-debug',
            '--compress', '2', '--no-header-files', '--no-man-pages'
}